# progetto_lista_spesa

./: .gitignore  CMakeLists.txt  Item.cpp  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ItemTest.cpp  ShoppingListTest.cpp  UserTest.cpp  runAllTests.cpp
test/lib/googletest/googletest/include/gtest/: gtest.h
test/lib/googletest/googletest/src/: gtest.cc  gtest_main.cc
